--- a/index.html
+++ b/index.html
@@ -352,10 +352,21 @@ a:hover {
 .smallest {
     width: 3.5vw; 
     height: 3.5vw;
-    max-width: 120px; 
-    max-height: 120px;
-    min-width: 80px;
-    min-height: 80px;
+    max-width: 105px; 
+    max-height: 105px;
+    min-width: 70px;
+    min-height: 70px;
+    font-size: 1em; /* Standard font size */
+}
+
+
+.smallest2 {
+    width: 3vw; 
+    height: 3vw;
+    max-width: 105px; 
+    max-height: 105px;
+    min-width: 60px;
+    min-height: 60px;
     font-size: 1em; /* Standard font size */
 }
 
@@ -839,14 +850,14 @@ section {
                    </li>
        
                    <li class="item">
-                       <span class="circle small" style="background-color: #2399B5;  margin-left: 1em; ">
+                       <span class="circle smallest" style="background-color: #2399B5;  margin-left: 1em; ">
                            <span>34%</span>
                        </span>
                        <span class="text">Long distances to other (non-medical) LGBT sensitive service providers</span>
                    </li>
        
                    <li class="item">
-                       <span class="circle smallest" style="background-color: #EECE43;  margin-left: 1em;">
+                       <span class="circle smallest2" style="background-color: #EECE43;  margin-left: 1em;">
                            <span>18%</span>
                        </span>
                        <span class="text">Doctors and other health care workers who refuse to provide services to LGBTQ people</span>
