--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ canvas {
         font-size: 14px;  /* Smaller font size for mobile devices */
         margin-left: 1em;
         margin-right: 1em; 
+        margin-top: 1em;
+        margin-bottom: 1em; 
     }
 
 
