--- a/index.html
+++ b/index.html
@@ -552,10 +552,10 @@ section {
             <li><a href="#section2">Generational shifts</a></li>
             <li><a href="#section3">Service/care disparities</a></li>
             <li><a href="#section4">Covid-19 impact</a></li>
-            <li><a href="#section5">Mental Health</a></li>
+            <li><a href="#section5">Mental health</a></li>
             <li><a href="#section6">Barriers to service</a></li>
             <li><a href="#section7">Policy opportunities</a></li>
-            <li><a href="#section8">Network Map</a></li>
+            <li><a href="#section8">Network map</a></li>
 
 
 
