--- a/bubbleChart.html
+++ b/bubbleChart.html
@@ -79,7 +79,7 @@
             text-anchor: middle;
             dominant-baseline: middle;
             font-size: 1em;
-            fill: black;
+            fill: white;
         }
         #chart-container {
             display: flex;
