--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> <!-- Chart.js Datalabels Plugin -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <!-- <link rel="stylesheet" href="style_mobile.css"> If you have a separate CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
@@ -56,11 +55,12 @@ h2 {
     
     display: flex;      /* Enables flexbox layout mode */
     flex-wrap: wrap;    /* Allows items to wrap onto the next line as needed */
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    /* height: 100vh; */
     margin-left: 3%;
     padding-top: 5%;
 }
+
 
 
 .column {
@@ -70,6 +70,8 @@ h2 {
     min-width: 0;        /* Fixes issues with flexbox stretching */
     margin-bottom: 5%;
 }
+
+
 
 
 canvas {
@@ -532,6 +534,8 @@ section {
             padding-left: 2%;    /* Adds padding to ensure bullets are inside the container */
         }
 
+
+
     </style>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -879,6 +883,7 @@ section {
     
 
 </div> </section>
+
 
 <section id="section7"> 
 
