--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    margin: 1% auto;
+    margin: 1% 1%;
     padding: 1 1 3%;
-    /* margin-top: 3%; */
-    /* margin-left: 3%; */
-    /* margin-right: 3%;
-    margin-bottom: 3%;  */
     background-color: #fafafa;
     color: #2399b5;
 
@@ -72,11 +68,6 @@ h2 {
     margin-bottom: 5%;
 }
 
-
-
-iframe {
-    display: block; /* Ensures the iframe is treated as a block element */
-}
 
 
 
