--- a/chordDiagram.html
+++ b/chordDiagram.html
@@ -37,7 +37,7 @@
             stroke-width: 2;
         }
         .legend text {
-        fill: grey; /* Change the color of the legend text to grey */
+        fill: black; /* Change the color of the legend text to grey */
     }
 
     </style>
