--- a/chordDiagram.html
+++ b/chordDiagram.html
@@ -36,9 +36,17 @@
         .legend rect {
             stroke-width: 2;
         }
-        .legend text {
-        fill: black; /* Change the color of the legend text to grey */
-    }
+
+        
+    .legend text {
+    fill: black; 
+    text-shadow: 
+        -.5px -.5px 0 white,  
+        .5px -.5px 0 white,
+        -.5px .5px 0 white,
+        .5px .5px 0 white; /* Black highlight */
+}
+    
 
     </style>
 </head>
