--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ section {
                 <br><br>
                 
           <div style="border: 1px solid #7EBC64; border-radius: 1.5em; padding-top: 1em; padding-left: 1em; padding-right: 1em;">
-            &nbsp;<i style="font-size:1em; color: #F2695F" class="fa">&#xf245;</i> Hover over the chart below to see the breakdown of those who reported increased difficulty in obtaining services during Covid-19, by category and ethnicity.</p>
+            &nbsp;<i style="font-size:1em; color: #F2695F" class="fa">&#xf245;</i> Hover over the chart below to see the breakdown of those who reported, by care type, increased difficulty in obtaining services during Covid-19, by category and ethnicity.</p>
                 </div> 
                 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="chordDiagram.html" height="50%" width="100%" overflow="hidden"></iframe>
 
