--- a/chordDiagram.html
+++ b/chordDiagram.html
@@ -37,14 +37,16 @@
         }
         .legend-item span {
             font-family: Arial, sans-serif;
-            font-size: 0.75em;
+            font-size: .8em;
             color: #666666;
         }
+
         .legend-square {
-            width: 1em;
-            height: 1em;
-            margin-right: 5px;
-        }
+    width: 2vw;  /* Adjust these values to suit your design */
+    height: 2vw;  /* Adjust these values to suit your design */
+    margin-right: 1em;
+}
+
         #chart {
             width: 70%;
             height: 100%;
