--- a/chordDiagram.html
+++ b/chordDiagram.html
@@ -62,7 +62,7 @@
             height: auto;
             padding: 5px;
             font: 12px sans-serif;
-            background: black;
+            background: rgba(0, 0, 0, 0.75); /* Black with 0.75 opacity */
             border: 0px;
             border-radius: 8px;
             pointer-events: none;
