--- a/network_map.html
+++ b/network_map.html
@@ -4,10 +4,9 @@
 <meta charset="utf-8" />
 <title>The Network Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
-<link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-
 <style>
   body { 
     margin: 0; 
@@ -34,7 +33,7 @@
     font-size: 0.75em;
     top: 0px;
     left: 0px;
-    z-index: 1;
+    z-index: 1000; /* Ensure legend is on top */
     border: 1px solid grey;
     overflow-y: auto;
     max-height: 100vh;
@@ -64,7 +63,7 @@
     background: linear-gradient(to right, #2399B5, #7EBC64, #EECE43, #F2695F);
   }
   
-  .mapboxgl-popup-content {
+  .leaflet-popup-content {
     border-radius: 1%;
   }
   
@@ -78,7 +77,7 @@
     color: white;
   }
   
-  .mapboxgl-popup-content a {
+  .leaflet-popup-content a {
     outline: none;
     border: none;
     text-decoration: none;
@@ -120,6 +119,12 @@
       width: 80vw;
     }
   }
+
+  /* Custom CSS to place the zoom control at the bottom right corner */
+  .leaflet-bottom.leaflet-right {
+    right: 10px;
+    bottom: 10px;
+  }
 </style>
 </head>
 <body>
@@ -139,72 +144,62 @@
   <input type="checkbox" id="toggle-popups" checked>Network Members<br>
 
   <h3>Barriers to service/care</h3>
-     <input type="checkbox" id="toggle-culturally_competent">Long distances to culturally competent LGBTQ+ medical facilities<br>
-     <input type="checkbox" id="toggle-lack_of_information">Lack of information about LGBTQ medical or service providers in my area<br>
-     <input type="checkbox" id="toggle-community_fear">Community fear or dislike of LGBTQ people<br>
-     <input type="checkbox" id="toggle-support_groups">Not enough support groups (clinical or peer) for LGBTQ+ people<br>
-     <input type="checkbox" id="toggle-adequately_trained">Not enough health professionals who are adequately trained and competent to deliver healthcare to LGBTQ people<br>
-     <input type="checkbox" id="toggle-refuse_service">Doctors and other healthcare workers who refuse to provide service<br>
-
-
+     <input type="checkbox" class="barrier-checkbox" id="toggle-culturally_competent">Long distances to culturally competent LGBTQ+ medical facilities<br>
+     <input type="checkbox" class="barrier-checkbox" id="toggle-lack_of_information">Lack of information about LGBTQ medical or service providers in my area<br>
+     <input type="checkbox" class="barrier-checkbox" id="toggle-community_fear">Community fear or dislike of LGBTQ people<br>
+     <input type="checkbox" class="barrier-checkbox" id="toggle-support_groups">Not enough support groups (clinical or peer) for LGBTQ+ people<br>
+     <input type="checkbox" class="barrier-checkbox" id="toggle-adequately_trained">Not enough health professionals who are adequately trained and competent to deliver healthcare to LGBTQ people<br>
+     <input type="checkbox" class="barrier-checkbox" id="toggle-refuse_service">Doctors and other healthcare workers who refuse to provide service<br>
 </div>
 <div id='map'></div>
 <script>
-  // Your Mapbox access token
-  mapboxgl.accessToken = 'pk.eyJ1IjoiYW1jYW0zMyIsImEiOiJjbG52NjJ0OWswanA4MmtueGk0cWxjNGN2In0.9unlp_ocI7GFYNdPbgUdsw';
-  // Initialize the map
-  var map = new mapboxgl.Map({
-    container: 'map', // Container ID
-    style: 'mapbox://styles/mapbox/light-v11', // Map style to use
-    center: [-75.65929113474522, 43.022150007429644], // Starting position [lng, lat]
-    zoom: 5.5 // Starting zoom level
-  });
+  // Initialize the Leaflet map with zoomControl set to false
+  var map = L.map('map', {
+    zoomControl: false
+  }).setView([43.022150007429644, -75.65929113474522], 5.5);
+
+  // Add zoom control manually to the bottom right corner
+  L.control.zoom({
+    position: 'bottomright'
+  }).addTo(map);
+
+  // Add Mapbox tiles
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiYW1jYW0zMyIsImEiOiJjbG52NjJ0OWswanA4MmtueGk0cWxjNGN2In0.9unlp_ocI7GFYNdPbgUdsw', {
+    id: 'mapbox/light-v11',
+    tileSize: 512,
+    zoomOffset: -1,
+    accessToken: 'pk.eyJ1IjoiYW1jYW0zMyIsImEiOiJjbG52NjJ0OWswanA4MmtueGk0cWxjNGN2In0.9unlp_ocI7GFYNdPbgUdsw'
+  }).addTo(map);
 
   var markers = [];
   var programPopups = [];
-  var choroplethPopup = new mapboxgl.Popup({
-    closeButton: false,
-    closeOnClick: false
-  });
 
-  // Function to hide all program popups
-  function hideAllProgramPopups() {
-    programPopups.forEach(function(popup) {
-      popup.remove();
-    });
-  }
+  // Define a custom pink bubble icon
+  var pinkBubbleIcon = L.divIcon({
+    html: '<div style="background-color: white; width: .75em; height: .75em; border-radius: 100%; border: .3em solid #F2695F;"></div>',
+    className: 'custom-icon'
+  });
 
   // Load CSV data
   d3.csv('network_programs.csv').then(function(csvData) {
     csvData.forEach(function(row) {
-      var popup = new mapboxgl.Popup({ offset: 25 })
-      .setHTML('<h3>' + row.program + '</h3><p>' + row.description + '</p><p>Contact: <a href="mailto:' + row.contact + '">' + row.contact + '</a></p>')
-        .setLngLat([parseFloat(row.longitude), parseFloat(row.latitude)]);
+      var popupContent = '<h3>' + row.program + '</h3><p>' + row.description + '</p><p>Contact: <a href="mailto:' + row.contact + '">' + row.contact + '</a></p>';
+      var popup = L.popup({ className: 'program-popup' }).setContent(popupContent);
 
-      // Add custom class to the popup for styling
-      popup._content.classList.add('program-popup');
-      programPopups.push(popup);
-
-      var marker = new mapboxgl.Marker({ color: '#F2695F'})
-        .setLngLat([parseFloat(row.longitude), parseFloat(row.latitude)])
-        .setPopup(popup)
+      var marker = L.marker([parseFloat(row.latitude), parseFloat(row.longitude)], { icon: pinkBubbleIcon })
+        .bindPopup(popup)
         .addTo(map);
 
-      // Add click event listener
-      marker.getElement().addEventListener('click', (e) => {
-        e.stopPropagation(); // Stop the event from propagating to the map
-        hideAllProgramPopups();
-        popup.addTo(map);
-        popup._container.style.zIndex = 20; // Ensure a high z-index
-      });
-
       markers.push(marker);
+      programPopups.push(popup);
     });
   });
 
   // Close popups when clicking anywhere else on the map
   map.on('click', function () {
-    hideAllProgramPopups();
+    programPopups.forEach(function(popup) {
+      popup.removeFrom(map);
+    });
   });
 
   // Load and merge GeoJSON and CSV data
@@ -215,7 +210,6 @@
     var geojson = files[0];
     var csvData = files[1];
 
-    // Create a lookup for the CSV data
     var csvLookup = {};
     csvData.forEach(function(row) {
       var countyData = {};
@@ -229,10 +223,6 @@
       csvLookup[row.county] = countyData;
     });
 
-    // Log CSV lookup to verify its contents
-    console.log("CSV Lookup:", csvLookup);
-
-    // Merge CSV data into GeoJSON properties
     geojson.features.forEach(function(feature) {
       var countyName = feature.properties.name;
       var data = csvLookup[countyName];
@@ -241,118 +231,68 @@
       }
     });
 
-    console.log("Merged GeoJSON:", geojson);
-
     // List of columns to create layers for
     var columns = ['culturally_competent', 'lack_of_information', 'community_fear', 'support_groups', 'adequately_trained', 'refuse_service'];
 
-    // Add GeoJSON source to the map
-    map.on('load', function () {
-      map.addSource('counties', {
-        'type': 'geojson',
-        'data': geojson
-      });
-
-      columns.forEach(function(column) {
-        // Add a new layer to visualize the data for each column
-        map.addLayer({
-          'id': column + '-layer',
-          'type': 'fill',
-          'source': 'counties', // Reference the data source
-          'layout': {
-            'visibility': 'none' // Set initial visibility to none
-          },
-          'paint': {
-            'fill-color': [
-              'interpolate',
-              ['linear'],
-              ['get', column],
-              0, '#2399B5',
-              0.25, '#7EBC64',
-              0.5, '#EECE43',
-              0.75, '#F2695F',
-              1, '#F2695F'
-            ],
-            'fill-opacity': .9
-          }
-        }, 'waterway-label'); // Place before the waterway-label layer
-
-        // Add a layer for the county borders
-        map.addLayer({
-          'id': column + '-borders',
-          'type': 'line',
-          'source': 'counties',
-          'layout': {
-            'visibility': 'none' // Set initial visibility to none
-          },
-          'paint': {
-            'line-color': '#ffffff',
-            'line-width': .5
-          }
-        });
-
-        // Show popup on hover
-        map.on('mousemove', column + '-layer', function (e) {
-          var regionName = e.features[0].properties.region; // Access the region property
-          var value = e.features[0].properties[column];
-
-          // Ensure the popup only shows if the mouse moves over a new feature
-          if (e.features.length > 0) {
-            choroplethPopup
-              .setLngLat(e.lngLat)
-              .setHTML('<h3>' + regionName + '</h3><p>% Who Answered "Somewhat" or "Major": ' + (value * 100).toFixed(1) + '%</p>')
-              .addTo(map);
-
-            // Add custom class to the popup for styling
-            choroplethPopup._content.classList.add('choropleth-popup');
-            choroplethPopup._container.style.zIndex = 10; // Default z-index for choropleth popups
-          }
-        });
-
-        // Remove the popup when the mouse leaves the county layer
-        map.on('mouseleave', column + '-layer', function () {
-          map.getCanvas().style.cursor = '';
-          choroplethPopup.remove();
-        });
-
-        // Change the cursor to a pointer when the mouse is over the county layer
-        map.on('mouseenter', column + '-layer', function () {
-          map.getCanvas().style.cursor = 'pointer';
-        });
-
-        // Change the cursor back to default when it leaves the county layer
-        map.on('mouseleave', column + '-layer', function () {
-          map.getCanvas().style.cursor = '';
-        });
-
-        // Toggle visibility of layers
-        document.getElementById('toggle-' + column).addEventListener('change', function(e) {
-          if (e.target.checked) {
-            columns.forEach(function(col) {
-              if (col !== column) {
-                document.getElementById('toggle-' + col).checked = false;
-                map.setLayoutProperty(col + '-layer', 'visibility', 'none');
-                map.setLayoutProperty(col + '-borders', 'visibility', 'none');
-              }
-            });
-            map.setLayoutProperty(column + '-layer', 'visibility', 'visible');
-            map.setLayoutProperty(column + '-borders', 'visibility', 'visible');
-          } else {
-            map.setLayoutProperty(column + '-layer', 'visibility', 'none');
-            map.setLayoutProperty(column + '-borders', 'visibility', 'none');
-          }
-        });
-      });
-    });
-
-    document.getElementById('toggle-popups').addEventListener('change', function(e) {
-      markers.forEach(function(marker) {
-        if (e.target.checked) {
-          marker.getElement().style.display = 'block';
-        } else {
-          marker.getElement().style.display = 'none';
+    columns.forEach(function(column) {
+      var geoJsonLayer = L.geoJSON(geojson, {
+        style: function(feature) {
+          var value = feature.properties[column];
+          var color = value === null ? '#f7f7f7' : 
+                      value <= 0.25 ? '#2399B5' :
+                      value <= 0.5 ? '#7EBC64' :
+                      value <= 0.75 ? '#EECE43' : '#F2695F';
+          return { fillColor: color, weight: 1, color: 'white', fillOpacity: 0.9 };
+        },
+        onEachFeature: function(feature, layer) {
+          layer.on('mouseover', function(e) {
+            var regionName = feature.properties.region;
+            var value = feature.properties[column];
+            layer.bindPopup('<h3>' + regionName + '</h3><p>% Who Answered "Somewhat" or "Major": ' + (value * 100).toFixed(1) + '%</p>').openPopup(e.latlng);
+          });
+          layer.on('mouseout', function() {
+            layer.closePopup();
+          });
         }
       });
+
+      document.getElementById('toggle-' + column).addEventListener('change', function(e) {
+        if (e.target.checked) {
+          columns.forEach(function(col) {
+            if (col !== column) {
+              document.getElementById('toggle-' + col).checked = false;
+              map.removeLayer(geoJsonLayer);
+            }
+          });
+          map.addLayer(geoJsonLayer);
+        } else {
+          map.removeLayer(geoJsonLayer);
+        }
+      });
+    });
+  });
+
+  document.getElementById('toggle-popups').addEventListener('change', function(e) {
+    markers.forEach(function(marker) {
+      if (e.target.checked) {
+        marker.addTo(map);
+      } else {
+        map.removeLayer(marker);
+      }
+    });
+  });
+
+  // Add event listener to barrier checkboxes for single selection
+  const barrierCheckboxes = document.querySelectorAll('.barrier-checkbox');
+  barrierCheckboxes.forEach(function(checkbox) {
+    checkbox.addEventListener('change', function() {
+      if (this.checked) {
+        barrierCheckboxes.forEach(function(otherCheckbox) {
+          if (otherCheckbox !== checkbox) {
+            otherCheckbox.checked = false;
+          }
+        });
+      }
     });
   });
 </script>
